Fixes map zoom controls being cut off on Mobile Safari
The map's height was being set to 100vh instead of 100% of its container, which meant it was about 100px too tall on an iPhone 16.

--- a/src/assets/styles/leaflet-map.css
+++ b/src/assets/styles/leaflet-map.css
@@ -1,10 +1,5 @@
 .leaflet-touch {
 	.leaflet-bar {
-		position: absolute;
-		bottom: 64px;
-		padding: 0px;
-		right: -1px;
-
 		.leaflet-control-zoom-in,
 		.leaflet-control-zoom-out {
 			width: 2.2rem;
@@ -26,6 +21,7 @@
 		display: none;
 	}
 }
+
 .leaflet-control {
 	background-color: #fff;
 }
